--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,17 @@
 
     <string name="action_settings">Settings</string>
     <string name="check_in">Check in</string>
+    <string name="create_user">Create User</string>
     <string name="login">Login</string>
     <string name="user_name">User Name</string>
     <string name="password">Password</string>
+    <string name="retype_password">Confirm Password</string>
+    <string name="name">Name</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="address">Address</string>
+    <string name="designation">Designation</string>
+    <string name="police_station">Police Station</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
