--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="check_in">Check in</string>
     <string name="create_user">Create User</string>
     <string name="login">Login</string>
-    <string name="user_name">User Name</string>
+    <string name="user_name">Username</string>
     <string name="password">Password</string>
     <string name="retype_password">Confirm Password</string>
     <string name="name">Name</string>
@@ -17,6 +17,14 @@
     <string name="designation">Designation</string>
     <string name="police_station">Police Station</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_name_empty">Enter User Name</string>
+    <string name="password_empty">Enter Password</string>
+    <string name="retype_password_empty">Enter Confirm Password</string>
+    <string name="name_empty">Enter Name</string>
+    <string name="mobile_number_empty">Enter Mobile Number</string>
+    <string name="address_empty">Enter Address</string>
+    <string name="designation_empty">Enter Designation</string>
+    <string name="police_station_empty">Enter Police Station</string>
+    <string name="password_mismatch">Passwords do no not match</string>
+    <string name="incorrect_login_credentials">Username or Password incorrect</string>
 </resources>
