--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="police_station_empty">Enter Police Station</string>
     <string name="password_mismatch">Passwords do no not match</string>
     <string name="incorrect_login_credentials">Username or Password incorrect</string>
+    <string name="logout">Logout</string>
+    <string name="call_backup">Call Backup</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
